--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,3 +6,8 @@ spring:
     url: jdbc:mysql://localhost:3306/onlinejudge?serverTimezone=GMT%2b8
     username: root
     password:
+
+mybatis:
+  mapper-locations: classpath:mapper/*.xml # ????mybatis?xml??
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # ??sql??
