--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,13 +1,23 @@
 server:
   port: 9090
+
+
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/onlinejudge?serverTimezone=GMT%2b8
     username: root
     password:
+  mvc:
+    pathmatch:
+      matching-strategy: ant_path_matcher
+
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml # 扫描所有mybatis的xml文件
+#  configuration:
+#    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印sql语句
+
+mybatis-plus:
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl # 打印sql语句
