--- a/vue/package.json
+++ b/vue/package.json
@@ -7,11 +7,11 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.1.2",
     "core-js": "^3.8.3",
-    "default-passive-events": "^2.0.0",
     "echarts": "^5.4.0",
     "element-ui": "^2.15.10",
+    "js-cookie": "^3.0.1",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
