--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,8 @@ spring:
       matching-strategy: ant_path_matcher
   servlet:
     multipart:
-      max-request-size: 100MB
+      max-file-size: 1000MB
+      max-request-size: 1000MB
 
 mybatis:
   mapper-locations: classpath:mapper/*.xml # 扫描所有mybatis的xml文件
