--- a/vue/package.json
+++ b/vue/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.15.10",
     "js-cookie": "^3.0.1",
     "vue": "^2.6.14",
+    "vue-fragment": "^1.6.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
