--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,9 @@ spring:
 #    url: jdbc:mysql://38.54.56.234:3306/onlinejudge?serverTimezone=GMT%2b8
     username: root
     password:
+  redis:
+    host: localhost
+    port: 6379
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
